_old-projects/kubernetes/argocd/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`argo.local.m1xxos.tech`)
    priority: 10
    services:
    - name: argocd-server
      port: 80
  - kind: Rule
    match: Host(`argo.local.m1xxos.tech`) && Headers(`Content-Type`, `application/grpc`)
    priority: 11
    services:
    - name: argocd-server
      port: 80
      scheme: h2c
  tls:
    secretName: local-m1xxos-me
